--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://vlmakh.github.io/goit-team-project-02",
+  "homepage": "https://Mykola0502/filmoteka-team-project-02",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-team-project-02/"
+    "build": "parcel build src/*.html --public-url /filmoteka-team-project-02/"
   },
   "repository": {
     "type": "git",
